Integrated ApiResponse<T> & ApiError in Auth/User Services